--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,6 +12,9 @@
     <!-- <script src="assests/js/jquery-3.6.0.min_2.js"></script> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
+      body{
+        background-color: wheat;
+      }
       .btn-outline-success:hover{
         background-color:#87cab2;
       }
