--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,8 +1,8 @@
 <%- include('header'); -%>
 <h1>Products</h1>
-<%= products %>
+</*%= products %*/>
 <% for(let index =0; index < products.length; index++){ %> 
-    <h5>
+    <h5 style="color: red;">
     <%= products[index].title %>
 </h5>
 <% } %>
