--- a/views/product.ejs
+++ b/views/product.ejs
@@ -5,6 +5,7 @@
     <h5 style="color: red;">
     <%= products[index].title %>
 </h5>
+<img src="<%= products[index].thumbnail %>" alt="">
 <% } %>
 <%- include('footer'); -%>
 
